<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <EditText
        android:id="@+id/edt_register_account"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/shape_input_color"
        android:hint="@string/register_account_hint"
        android:layout_margin="10dp"
        android:paddingLeft="10dp"
        android:inputType="phone"
        android:maxLength="11"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"/>

    <EditText
        android:id="@+id/edt_register_pass"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/register_password_hint"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="10dp"
        android:maxLength="16"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:background="@drawable/shape_input_color"
        android:textColorHint="@android:color/darker_gray"/>
    <EditText
        android:id="@+id/edt_register_sure_pass"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/shape_input_color"
        android:hint="@string/register_again_pass_hint"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="10dp"
        android:inputType="textPassword"
        android:maxLength="16"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="10dp">
        <EditText
            android:id="@+id/edt_register_verify_code"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="match_parent"
            android:background="@drawable/shape_input_color"
            android:hint="@string/register_verify_hint"
            android:paddingLeft="10dp"
            android:inputType="number"
            android:maxLength="6"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/tv_register_verify"
            android:layout_width="0dp"
            android:layout_weight="3.5"
            android:layout_height="match_parent"
            android:text="@string/register_gain_verify_hint"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            android:background="@drawable/shape_input_color"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/register_button_hint"
        android:textSize="18sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@android:color/background_light"
        android:background="@drawable/selector_login_bg_color" />
</LinearLayout>