<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color14"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/tv_add_gesture_pass"
        android:drawableRight="@mipmap/ic_right_arrows"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:textColor="@android:color/black"
        android:text="@string/control_add_gesture_pass" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color14"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:drawableRight="@mipmap/ic_right_arrows"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:textColor="@android:color/black"
        android:text="@string/setting_app_update"
        android:id="@+id/tv_setting_app_update" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color14"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:drawableRight="@mipmap/ic_right_arrows"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:textColor="@android:color/black"
        android:text="@string/setting_helper"
        android:id="@+id/tv_setting_helper" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color14"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:drawableRight="@mipmap/ic_right_arrows"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:textColor="@android:color/black"
        android:text="@string/setting_about_us"
        android:id="@+id/tv_setting_about" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color14"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:drawableRight="@mipmap/ic_right_arrows"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:textColor="@android:color/black"
        android:text="@string/opinion_title"
        android:id="@+id/tv_setting_opinion" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color14"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:drawableRight="@drawable/selector_setting_fingerprint"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        android:button="@null"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:textColor="@android:color/black"
        android:text="@string/setting_fingerprint_switch"
        android:id="@+id/cb_fingerprint_switch" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color14"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:drawableRight="@drawable/selector_setting_fingerprint"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        android:button="@null"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:textColor="@color/color3"
        android:text="@string/correlation_setting_false_lock_alarm"
        android:id="@+id/cb_correlation_false_lock_alarm" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color14"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:drawableRight="@drawable/selector_setting_fingerprint"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        android:button="@null"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:textColor="@color/color3"
        android:text="@string/correlation_setting_pry_alarm"
        android:id="@+id/cb_correlation_pry_alarm" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color14"/>
</LinearLayout>