<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@color/color7">
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@mipmap/ic_aging_pass_bg"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aging_start_date"
            android:layout_marginLeft="10dp"
            android:textColor="@color/color2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/aging_pass_date_hint"
            android:layout_marginLeft="10dp"
            android:textColorHint="@color/color1"
            android:paddingLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:textColor="@color/color2"
            android:background="@drawable/shape_input_color"
            android:id="@+id/tv_aging_pass_date" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aging_end_date"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/aging_pass_time_hint"
            android:layout_marginLeft="10dp"
            android:paddingLeft="5dp"
            android:textColorHint="@color/color1"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:textColor="@color/color2"
            android:background="@drawable/shape_input_color"
            android:id="@+id/tv_aging_pass_time" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="密码"
            android:layout_marginLeft="10dp"
            android:textColor="@color/color2"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:paddingLeft="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:maxLength="8"
            android:inputType="numberPassword"
            android:textColor="@color/color2"
            android:textColorHint="@color/color1"
            android:textSize="15sp"
            android:background="@drawable/shape_input_color"
            android:hint="@string/aging_pass_password_hint"
            android:id="@+id/edt_aging_pass_password" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="45dp"
                android:text="@string/aging_pass_create"
                android:textSize="16sp"
                android:layout_marginRight="5dp"
                android:background="@drawable/shape_create_pass_bg_color"
                android:textColor="@android:color/white"
                android:id="@+id/btn_aging_pass_create" />
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="45dp"
                android:text="@string/aging_pass_cancel"
                android:layout_marginLeft="5dp"
                android:textSize="16sp"
                android:background="@drawable/shape_input_color"
                android:textColor="@color/color2"
                android:id="@+id/btn_aging_pass_cancel" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>